feat: Integrate Google GenAI and refactor finances
Add the `@google/genai` dependency to enable future AI integrations. Refactor the financial data structure in `App-1.tsx` to include `assets` and a more robust `categories` object with budget limits and emojis. Update `Dashboard.tsx` to accept `settings` and `logs` props and ensure correct Y-axis domain typing. Improve type safety in `Tracker.tsx` and `QuitHabits.tsx` by explicitly typing `dates` arrays.

--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "omnilife",
   "private": true,
@@ -13,7 +14,8 @@
     "react-dom": "^18.2.0",
     "lucide-react": "latest",
     "recharts": "^2.12.0",
-    "firebase": "^10.8.0"
+    "firebase": "^10.8.0",
+    "@google/genai": "^0.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
