--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "omnilife",
   "private": true,
@@ -14,8 +13,7 @@
     "react-dom": "^18.2.0",
     "lucide-react": "latest",
     "recharts": "^2.12.0",
-    "firebase": "^10.8.0",
-    "@google/genai": "^0.1.0"
+    "firebase": "^10.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
