--- a/package.json
+++ b/package.json
@@ -13,13 +13,22 @@
     "react-dom": "^18.2.0",
     "lucide-react": "latest",
     "recharts": "^2.12.0",
-    "firebase": "^10.8.0"
+    "firebase": "^10.8.0",
+    "date-fns": "^3.0.0",
+    "chrono-node": "^2.7.0",
+    "react-big-calendar": "^1.11.0",
+    "react-day-picker": "^8.10.0",
+    "zustand": "^4.4.0",
+    "uuid": "^9.0.1",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "@types/chrono-node": "^2.7.0",
+    "@types/uuid": "^9.0.0"
   }
 }
